# kwallet-pam

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  README.md  README.txt  pam_darwin.c  pam_darwin.h  pam_kwallet.c  pam_kwallet_init  pam_kwallet_init.desktop.cmake  plasma-kwallet-pam.service.in
cmake/modules/: FindLibGcrypt.cmake
test/: PamHandle.cpp  PamHandle.h  main.cpp
